# fastapi_grpc_todo

./: .gitignore  docker-compose.yaml  pyproject.toml  readme.md
todo/alembic/: env.py
todo/app/: grpc_server.py  main.py
todo/app/api/: router.py
todo/app/api/routes/: todo.py
todo/app/core/: config.py
todo/app/models/: __init__.py  base.py  db_helper.py  todo.py
todo/app/pb/: todo_pb2.py  todo_pb2.pyi  todo_pb2_grpc.py
todo/app/protos/: todo.proto
todo/app/schemas/: todo.py
todo/app/services/: todo_client.py  todo_server.py
